2000-06-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSCoder.m: Use AUTORELEASE and tidy up.

2000-06-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileHandle.m: Use AUTORELEASE and tidy up.

2000-06-21  Adam Fedor  <fedor@gnu.org>

        * Shared library (DLL) fixes on Windows
	* configure.in: Check for alternate objc (DLL) libraries.
	Look for objc_get_uninstalled_dtable.
	* Source/behavior.m (behavior_class_add_methods): Don't look for
	uninstalled_dtable if no objc_get_uninstalled_dtable.
	(check_class_methods): Remove unused.
	* Source/objc-load.m: Likewise.

	* Headers/gnustep/base/NSObjCRuntime.h: Define GS_EXPORT
	* Headers/gnustep/base/NSZone.h: Define functions either static
	or extern depending on whether NSZone.m is being compiled.
	* Source/NSZone.m: Remove duplicate functions.
	* Source/Makefile.preamble (LIBRARIES_DEPEND_UPON): Add -lobjc
	if on windows.

	* Source/UdpPort.m: Use NSMutableArray.

2000-06-19  Adam Fedor  <fedor@gnu.org>

	* Source/NSBundle.m (_bundle_name_first_match): Work even when
	filename has a directory component. (patch from Julian van
	Greunen <vangrn@lantic.co.za>).

2000-06-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSScanner.m: ([-scanHexInt:]) fixed to permit leading 0x or 0X
	* Documentation/gsdoc/NSScanner.gsdoc: fleshed out
	* Tools/Makefile.postamble: Added documentation target - build before
	install
	* Tools/gsdoc-0_6_6.dtd: New dtd under development - add java support,
	permit multiple indices at end of document, permit <br/> element.
	* Tools/gsdoc.m: Update to work with current dtd
	* Tools/gsdoc.gsdoc: Add a little more text on document body structure.

2000-06-20  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.in: Added check for recent libxml
	* config.mak.in: Added defeine for HAVE_LIBXML
	* Tools/gsdoc.m: Added from GSDoc and modified for standard
	libxml 2.0 installation
	* Tools/gsdoc-0_6_5.dtd: Added from GSDoc
	* Tools/gsdoc.gsdoc: Added from GSDoc