@@ -1,6 +1,8 @@
 2000-06-26  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSCoder.m: Use AUTORELEASE and tidy up.
+	* Source/NSArchiver.m: Fix bug in ([-replaceObject:withObject:])
+	* Source/NSObject.m: Optimise default replacementObjectForPortCoder
 
 2000-06-23  Richard Frith-Macdonald <rfm@gnu.org>
 
